--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
+    "react-select": "^5.9.0",
     "react-tailwind-app": "^1.7.0",
     "react-toastify": "^11.0.2",
     "sweetalert2": "^11.15.2"
